--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -1,26 +1,21 @@
 .gallery {
-    text-align: center;
-    padding: 20px;
-  }
-  
-  .image-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); 
-    gap: 30px; 
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
     padding: 20px;
-    justify-content: center;
   }
   
-  img {
-    width: 100%;  
-    max-width: 220px;  
+  .gallery img {
+    width: 100%;
+    height: auto;
     display: block;
-    margin: auto; 
-    border-radius: 8px; 
-    transition: transform 0.3s ease-in-out;
+    transition: opacity 0.5s ease-in-out;
   }
   
-  img:hover {
-    transform: scale(1.05);
+  .loading {
+    text-align: center;
+    font-size: 18px;
+    color: gray;
+    padding: 10px;
   }
   
